{
  "version": 4,
  "terraform_version": "1.15.2",
  "serial": 229,
  "lineage": "f340813e-c57d-52fc-6da9-31a5d92d0ea8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-035f4c601044a7af4",
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:instance/i-081308b64ffb56b18",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-081308b64ffb56b18",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "seoul-ed25519-ksg-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0fca8b8a40d01c5bd"
              }
            ],
            "primary_network_interface_id": "eni-0fca8b8a40d01c5bd",
            "private_dns": "ip-10-2-1-8.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.1.8",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-071b79e24b91af1e7",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0577662e8c997fb34",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c2ad28773051fbc2"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "i-081308b64ffb56b18",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_subnet.publics",
            "aws_vpc.main",
            "data.aws_availability_zones.valid"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-035f4c601044a7af4",
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:instance/i-0efb36a0b3ef88bc7",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0efb36a0b3ef88bc7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "seoul-ed25519-ksg-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-02c13e30514ddc3b1"
              }
            ],
            "primary_network_interface_id": "eni-02c13e30514ddc3b1",
            "private_dns": "ip-10-2-0-126.ap-northeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.2.0.126",
            "region": "ap-northeast-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-084a4c04cf1a2a06d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0321771d6f8377913",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c2ad28773051fbc2"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "i-0efb36a0b3ef88bc7",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_subnet.publics",
            "aws_vpc.main",
            "data.aws_availability_zones.valid"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:internet-gateway/igw-012eae9cc02016389",
            "id": "igw-012eae9cc02016389",
            "owner_id": "511874874257",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "seoul-igw-main"
            },
            "tags_all": {
              "Name": "seoul-igw-main"
            },
            "vpc_id": "vpc-015228fe3229a55ad"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "igw-012eae9cc02016389",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "privates_without_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:route-table/rtb-0b99d80d7680801b7",
            "id": "rtb-0b99d80d7680801b7",
            "owner_id": "511874874257",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Name": "seoul-route-private-1"
            },
            "tags_all": {
              "Name": "seoul-route-private-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-015228fe3229a55ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtb-0b99d80d7680801b7",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:route-table/rtb-0f05013507f149e0a",
            "id": "rtb-0f05013507f149e0a",
            "owner_id": "511874874257",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [],
            "tags": {
              "Name": "seoul-route-private-2"
            },
            "tags_all": {
              "Name": "seoul-route-private-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-015228fe3229a55ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtb-0f05013507f149e0a",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:route-table/rtb-0415c91c9c03bc4f8",
            "id": "rtb-0415c91c9c03bc4f8",
            "owner_id": "511874874257",
            "propagating_vgws": [],
            "region": "ap-northeast-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-012eae9cc02016389",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "seoul-route-public"
            },
            "tags_all": {
              "Name": "seoul-route-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-015228fe3229a55ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtb-0415c91c9c03bc4f8",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privates",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1228417879d04b1",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0b99d80d7680801b7",
            "subnet_id": "subnet-0a34cf893fd2a0876"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtbassoc-0a1228417879d04b1",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_eip.nat_ips",
            "aws_nat_gateway.private_nat_gws",
            "aws_route_table.privates_with_nat",
            "aws_route_table.privates_without_nat",
            "aws_subnet.privates",
            "aws_subnet.publics",
            "aws_vpc.main",
            "data.aws_availability_zones.valid"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af4218175443e894",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0f05013507f149e0a",
            "subnet_id": "subnet-09f623092f0a1c25e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtbassoc-0af4218175443e894",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_eip.nat_ips",
            "aws_nat_gateway.private_nat_gws",
            "aws_route_table.privates_with_nat",
            "aws_route_table.privates_without_nat",
            "aws_subnet.privates",
            "aws_subnet.publics",
            "aws_vpc.main",
            "data.aws_availability_zones.valid"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d9c53c5a30eb380",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0415c91c9c03bc4f8",
            "subnet_id": "subnet-0321771d6f8377913"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtbassoc-05d9c53c5a30eb380",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.publics",
            "aws_vpc.main",
            "data.aws_availability_zones.valid"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b00caa2b6990f004",
            "region": "ap-northeast-2",
            "route_table_id": "rtb-0415c91c9c03bc4f8",
            "subnet_id": "subnet-0577662e8c997fb34"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "rtbassoc-0b00caa2b6990f004",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.publics",
            "aws_vpc.main",
            "data.aws_availability_zones.valid"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_map",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "db",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:security-group/sg-054441523b1e81ec3",
            "description": "allow ssh, mysql",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-054441523b1e81ec3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "fw-db",
            "name_prefix": "",
            "owner_id": "511874874257",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fw-db"
            },
            "tags_all": {
              "Name": "fw-db"
            },
            "timeouts": null,
            "vpc_id": "vpc-015228fe3229a55ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "sg-054441523b1e81ec3",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "redis",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:security-group/sg-0d557f6e477a86d27",
            "description": "allow ssh, redis",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d557f6e477a86d27",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "fw-redis",
            "name_prefix": "",
            "owner_id": "511874874257",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fw-redis"
            },
            "tags_all": {
              "Name": "fw-redis"
            },
            "timeouts": null,
            "vpc_id": "vpc-015228fe3229a55ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "sg-0d557f6e477a86d27",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "web",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:security-group/sg-01fc9d5041acbc6ea",
            "description": "allow http, https, ssh, icmp",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01fc9d5041acbc6ea",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "fw-web",
            "name_prefix": "",
            "owner_id": "511874874257",
            "region": "ap-northeast-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fw-web"
            },
            "tags_all": {
              "Name": "fw-web"
            },
            "timeouts": null,
            "vpc_id": "vpc-015228fe3229a55ad"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "sg-01fc9d5041acbc6ea",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privates",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:subnet/subnet-0a34cf893fd2a0876",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a34cf893fd2a0876",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511874874257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "seoul-subnet-private-1"
            },
            "tags_all": {
              "Name": "seoul-subnet-private-1"
            },
            "vpc_id": "vpc-015228fe3229a55ad"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "subnet-0a34cf893fd2a0876",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.valid"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:subnet/subnet-09f623092f0a1c25e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.2.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09f623092f0a1c25e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511874874257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "seoul-subnet-private-2"
            },
            "tags_all": {
              "Name": "seoul-subnet-private-2"
            },
            "vpc_id": "vpc-015228fe3229a55ad"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "subnet-09f623092f0a1c25e",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.valid"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "publics",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:subnet/subnet-0321771d6f8377913",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.2.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0321771d6f8377913",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511874874257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "seoul-subnet-public-1"
            },
            "tags_all": {
              "Name": "seoul-subnet-public-1"
            },
            "vpc_id": "vpc-015228fe3229a55ad"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "subnet-0321771d6f8377913",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.valid"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:subnet/subnet-0577662e8c997fb34",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0577662e8c997fb34",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "511874874257",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "seoul-subnet-public-2"
            },
            "tags_all": {
              "Name": "seoul-subnet-public-2"
            },
            "vpc_id": "vpc-015228fe3229a55ad"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "subnet-0577662e8c997fb34",
            "region": "ap-northeast-2"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.valid"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:511874874257:vpc/vpc-015228fe3229a55ad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0b92caef7e3199e1e",
            "default_route_table_id": "rtb-0aad8f5ec47a0d3bd",
            "default_security_group_id": "sg-0c2ad28773051fbc2",
            "dhcp_options_id": "dopt-08f1e1c8c978b36fd",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-015228fe3229a55ad",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aad8f5ec47a0d3bd",
            "owner_id": "511874874257",
            "region": "ap-northeast-2",
            "tags": {
              "Name": "seoul-vpc-main"
            },
            "tags_all": {
              "Name": "seoul-vpc-main"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "511874874257",
            "id": "vpc-015228fe3229a55ad",
            "region": "ap-northeast-2"
          }
        }
      ]
    }
  ]
}